CREATE TABLE SINHVIEN (
    MSSV CHAR(8) PRIMARY KEY,
    TENSV NVARCHAR(30) NOT NULL,
    SODT VARCHAR(10) NOT NULL,
    LOP CHAR(10) NOT NULL,
    DIACHI NCHAR(50)
);

CREATE TABLE DETAI (
    MSDT CHAR(6) PRIMARY KEY,
    TENDT NVARCHAR(30) NOT NULL
);

CREATE TABLE SV_DETAI (
    MSSV CHAR(8),
    MSDT CHAR(6),
    PRIMARY KEY (MSSV, MSDT),
    CONSTRAINT FK_SV_DETAI_SV  FOREIGN KEY (MSSV) REFERENCES SINHVIEN(MSSV),
    CONSTRAINT FK_SV_DETAI_DT  FOREIGN KEY (MSDT) REFERENCES DETAI(MSDT)
);

CREATE TABLE HOCHAM (
    MSHH INT PRIMARY KEY,
    TENHH NVARCHAR(20) NOT NULL
);

CREATE TABLE GIAOVIEN (
    MSGV INT PRIMARY KEY,
    TENGV NVARCHAR(30) NOT NULL,
    DIACHI NVARCHAR(50) NOT NULL,
    SODT VARCHAR(10) NOT NULL,
    MSHH INT NOT NULL,
    NAMHH SMALLDATETIME NOT NULL,
    CONSTRAINT FK_GV_HH  FOREIGN KEY (MSHH) REFERENCES HOCHAM(MSHH)
);

CREATE TABLE HOCVI (
    MSHV INT PRIMARY KEY,
    TENHV NVARCHAR(20) NOT NULL
);

CREATE TABLE CHUYENNGANH (
    MSCN INT PRIMARY KEY,
    TENCN NVARCHAR(30) NOT NULL
);

CREATE TABLE GV_HV_CN (
    MSGV INT,
    MSHV INT,
    MSCN INT,
    NAM SMALLDATETIME NOT NULL,
    PRIMARY KEY (MSGV, MSHV, MSCN),
    CONSTRAINT FK_GV_HV_CN_GV FOREIGN KEY (MSGV) REFERENCES GIAOVIEN(MSGV),
    CONSTRAINT FK_GV_HV_CN_HV FOREIGN KEY (MSHV) REFERENCES HOCVI(MSHV),
    CONSTRAINT FK_GV_HV_CN_CN FOREIGN KEY (MSCN) REFERENCES CHUYENNGANH(MSCN)
);

CREATE TABLE GV_HDDT (
    MSGV INT,
    MSDT CHAR(6),
    DIEM FLOAT NOT NULL,
    PRIMARY KEY (MSGV, MSDT),
    CONSTRAINT FK_GV_HDDT_GV FOREIGN KEY (MSGV) REFERENCES GIAOVIEN(MSGV),
    CONSTRAINT FK_GV_HDDT_DT FOREIGN KEY (MSDT) REFERENCES DETAI(MSDT)
);

CREATE TABLE GV_PBDT (
    MSGV INT,
    MSDT CHAR(6),
    DIEM FLOAT NOT NULL,
    PRIMARY KEY (MSGV, MSDT),
    CONSTRAINT FK_GV_PBDT_GV FOREIGN KEY (MSGV) REFERENCES GIAOVIEN(MSGV),
    CONSTRAINT FK_GV_PBDT_DT FOREIGN KEY (MSDT) REFERENCES DETAI(MSDT)
);

CREATE TABLE GV_UVDT (
    MSGV INT,
    MSDT CHAR(6),
    DIEM FLOAT NOT NULL,
    PRIMARY KEY (MSGV, MSDT),
    CONSTRAINT FK_GV_UVDT_GV FOREIGN KEY (MSGV) REFERENCES GIAOVIEN(MSGV),
    CONSTRAINT FK_GV_UVDT_DT FOREIGN KEY (MSDT) REFERENCES DETAI(MSDT)
);

CREATE TABLE HOIDONG (
    MSHD INT PRIMARY KEY,
    PHONG INT NOT NULL,
    TGBD SMALLDATETIME NOT NULL,
    NGAYHD SMALLDATETIME NOT NULL,
    TINHTRANG NVARCHAR(30),
    MSGV INT,
    CONSTRAINT FK_HD_GV FOREIGN KEY (MSGV) REFERENCES GIAOVIEN(MSGV)
);

CREATE TABLE HOIDONG_GV (
    MSHD INT,
    MSGV INT,
    PRIMARY KEY (MSHD, MSGV),
    CONSTRAINT FK_HD_GV_HD FOREIGN KEY (MSHD) REFERENCES HOIDONG(MSHD),
    CONSTRAINT FK_HD_GV_GV FOREIGN KEY (MSGV) REFERENCES GIAOVIEN(MSGV)
);

CREATE TABLE HOIDONG_DT (
    MSHD INT,
    MSDT CHAR(6),
    QUYETDINH NCHAR(10),
    CONSTRAINT PK_HD_DT PRIMARY KEY (MSHD, MSDT),
    CONSTRAINT FK_HD_DT_HD FOREIGN KEY (MSHD) REFERENCES HOIDONG(MSHD),
    CONSTRAINT FK_HD_DT_DT FOREIGN KEY (MSDT) REFERENCES DETAI(MSDT)
);